# Game_LTNC

./: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
res/illustrator/: explosion.ai  menu.ai  player.ai  sprite.ai
res/map/: map note.txt
src/: Button.cpp  Explosion.cpp  character.cpp  coin.cpp  demo.cpp  gameObject.cpp  item.cpp  main.cpp  map.cpp  text.cpp  threat.cpp  timer.cpp  utils.cpp
src/header/: Button.h  Explosion.h  Image.h  character.h  coin.h  gameObject.h  item.h  main.h  map.h  text.h  threat.h  timer.h  utils.h
src/utils/: utils.h
